src/objects/EnrollmentPrelicensure__c.object
<CustomObject>
    <description>Object to be used by Enrollment for any additional Enrollment criteria for Prelicensure programs.</description>
    <fields>
        <fullName>ActualScienceGPA__c</fullName>
        <label>Actual Science GPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualTEASScore__c</fullName>
        <label>Actual TEAS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AnatomyWithLab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anatomy with Lab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssociatesDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associates Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSPRNApplicationStatus__c</fullName>
        <description>The application status used in Talisma to track the progress of a BSPRN applicant</description>
        <label>BSPRN Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Nursing Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matriculated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Prereqs - Consider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Prerequisites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Qualified State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BachelorsDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bachelors Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAREProfile__c</fullName>
        <label>CARE Profile</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Enrollment Prelicensure</relationshipLabel>
        <relationshipName>EnrollmentPrelicensure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CohortLocationNotes__c</fullName>
        <label>Cohort Location Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CohortState__c</fullName>
        <formula>Cohort__r.CohortHospital__r.BillingState</formula>
        <label>Cohort State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Enrollment Prelicensure</relationshipLabel>
        <relationshipName>EnrollmentPrelicensure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoursesApprovedList__c</fullName>
        <description>List of courses that was approved, used for the migration of data from Talisima to Salesforce</description>
        <label>Courses Approved List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoursesApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Courses Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentEmployer__c</fullName>
        <formula>CAREProfile__r.CurrentEmployer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentHealthcareEmployer__c</fullName>
        <label>Current Healthcare Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectorNotes__c</fullName>
        <label>Director Notes</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DirectorsRank__c</fullName>
        <label>Directors Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispositionValue__c</fullName>
        <description>Formula field that brings over the disposition value from the associated contact&apos;s care profile.</description>
        <formula>CAREProfile__r.DispositionValue__c</formula>
        <label>Disposition Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationOfHealthcareExperience__c</fullName>
        <label>Duration of Healthcare Experience</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DurationRubricScore__c</fullName>
        <formula>CASE(DurationOfHealthcareExperience__c,
&apos;&gt;5 years&apos;, 1.5,
&apos;1-5 years&apos;, 1.0,
&apos;&lt; 1 year&apos;, 0.5,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DurationRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECNotes__c</fullName>
        <label>EC Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECRank__c</fullName>
        <label>EC Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmployedInHealthcareIndustry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employed in Healthcare Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeOfPartner__c</fullName>
        <label>Employee of Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer or Other Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Affiliation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnglishComposition1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>English Composition 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollmentCounselor__c</fullName>
        <formula>CAREProfile__r.Owner.FirstName &amp; &quot; &quot; &amp;CAREProfile__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExperienceRubricScore__c</fullName>
        <formula>CASE(HealthcareExperience__c,
&apos;LVN/LPN/Paramedic&apos;, 2.0,
&apos;CNA/PCT/EMT&apos;, 1.5,
&apos;RT/PT/OT/DC&apos;, 1.0,
&apos;Indirect Patient Care&apos;, 0.5,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExperienceRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstCourseInBehavioralSciences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Course In Behavioral Sciences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstCourseInHumanities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Course In Humanities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenEdScoreNumber__c</fullName>
        <label>GenEdScoreNumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GenEdScore__c</fullName>
        <formula>IF(EnglishComposition1__c, 1, 0) + IF(PublicSpeaking__c, 1, 0) + IF (USHistoryOrWorldHistory__c, 1, 0) + IF(OneCourseBasicMathematics__c, 1, 0) + IF(FirstCourseInBehavioralSciences__c, 1, 0) + IF(FirstCourseInHumanities__c, 1, 0) + IF(SecondCourseInBehavioralSciences__c, 1, 0) + IF(SecondCourseInHumanities__c, 1, 0) + IF(HumanGrowthAndDevelopment__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GenEdScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GraduateDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduate Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthcareCertificationLicenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcare Certification/Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthcareExperience__c</fullName>
        <label>Healthcare Experience</label>
        <picklist>
            <picklistValues>
                <fullName>LVN/LPN/Paramedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA/PCT/EMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT/PT/OT/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Patient Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HealthcareProviderCPRCertification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcare Provider CPR Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HumanGrowthAndDevelopment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human Growth and Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternationalDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCallDisposition__c</fullName>
        <description>Formula field that brings over the Last Call Disposition from the associated student&apos;s care profile.</description>
        <formula>CAREProfile__r.LastCallDisposition__c</formula>
        <label>Last Call Disposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterRec1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Rec #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LetterRec2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Rec #2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiberalArts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liberal Arts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MicrobiologyWithLab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microbiology with Lab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameOfPreviousNursingSchool__c</fullName>
        <description>Name of the institution that was previously attended.</description>
        <label>Name of Previous Nursing School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NursingFileComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Nursing Docs Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NursingFileCompletedDate__c</fullName>
        <label>Date All Docs Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NursingScienceScoreNumber__c</fullName>
        <label>NursingScienceScoreNumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NursingScienceScore__c</fullName>
        <formula>IF(AnatomyWithLab__c, 1, 0) + IF(MicrobiologyWithLab__c, 1, 0) + IF(PhysiologyWithLab__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NursingScienceScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficialTranscripts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Official Transcripts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneCourseBasicMathematics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 Course in Basic Mathematics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerAffilitationRubricScore__c</fullName>
        <formula>CASE(EmployeeOfPartner__c,
&apos;Employee&apos;, 1.5,
&apos;Volunteer or Other Affiliation&apos;, 1.0,
&apos;No Affiliation&apos;, 0.0,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartnerAffilitationRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhysiologyWithLab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physiology with Lab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrelicensureApplicantId__c</fullName>
        <formula>CAREProfile__r.NursingPrelicenusreId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelicensure Applicant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrerequisiteNotes__c</fullName>
        <label>Prerequisite Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreviousNursingSchool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Nursing School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollment Prelicensure</relationshipLabel>
        <relationshipName>EnrollmentPrelicensure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorDegreeCompletion__c</fullName>
        <label>Prior Degree Completion</label>
        <picklist>
            <picklistValues>
                <fullName>Masters Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriorDegreeRubricScore__c</fullName>
        <formula>CASE( PriorDegreeCompletion__c,
&apos;Masters Degree&apos;, 1.5,
&apos;Bachelors Degree&apos;, 1.0,
&apos;Associates Degree&apos;, 0.5,
&apos;No Degree&apos;, 0.0,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriorDegreeRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorNursingCourseworkRubricScore__c</fullName>
        <formula>CASE(PriorNursingSchoolAttendance__c,
&apos;Voluntary Withdrawal&apos;, 0.5,
&apos;Academic Failure with Extenuating Circumstances&apos;, -0.5,
&apos;Academic Failure&apos;, -1.0,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriorNursingCourseworkRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorNursingSchoolAttendance__c</fullName>
        <label>Prior Nursing School Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Voluntary Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Failure with Extenuating Circumstances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProspectStatus__c</fullName>
        <formula>TEXT(CAREProfile__r.CareStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSpeaking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualificationLevel__c</fullName>
        <formula>IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 9), &apos;5&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 8), &apos;4&apos;, 
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 7), &apos;4&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 6), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 5), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 4), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c = 3), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 3, GenEdScoreNumber__c &lt;= 2), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 9), &apos;4&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 8), &apos;4&apos;, 
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 7), &apos;4&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 6), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 5), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 4), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c = 3), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 2, GenEdScoreNumber__c &lt;= 2), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 9), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 8), &apos;3&apos;, 
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 7), &apos;3&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 6), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 5), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 4), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c = 3), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 1, GenEdScoreNumber__c &lt;= 2), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 9), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 8), &apos;2&apos;, 
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 7), &apos;2&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 6), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 5), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 4), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c = 3), &apos;1&apos;,
IF(AND(NursingScienceScoreNumber__c = 0, GenEdScoreNumber__c &lt;= 2), &apos;1&apos;,
NULL))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RubricScore__c</fullName>
        <formula>TEASRubricScore__c + ScienceGPARubricScore__c + PriorDegreeRubricScore__c + ExperienceRubricScore__c + DurationRubricScore__c + PartnerAffilitationRubricScore__c + PriorNursingCourseworkRubricScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rubric Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScienceGPARange__c</fullName>
        <label>Science GPA Range</label>
        <picklist>
            <picklistValues>
                <fullName>3.50 - 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0 - 3.49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.50 - 2.99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScienceGPARubricScore__c</fullName>
        <formula>CASE( ScienceGPARange__c,
&apos;3.50 - 4.0&apos;, 1.5,
&apos;3.0 - 3.49&apos;, 1.0,
&apos;2.50 - 2.99&apos;, 0.5,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ScienceGPARubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondCourseInBehavioralSciences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Course In Behavioral Sciences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondCourseInHumanities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Course In Humanities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SemiQualifiedReason__c</fullName>
        <label>Semi-Qualified Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentStatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentsState__c</fullName>
        <formula>CAREProfile__r.ProspectsState__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Students State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEASExamRange__c</fullName>
        <label>TEAS Exam Range</label>
        <picklist>
            <picklistValues>
                <fullName>Exemplary &gt;/= 90.7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced &gt;= 78.0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient &gt;/= 58.7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Pass &lt;/= 58.6%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEASRubricScore__c</fullName>
        <formula>CASE( TEASExamRange__c ,
&apos;Exemplary &gt;/= 90.7%&apos;, 1.5,
&apos;Advanced &gt;= 78.0%&apos;, 1.0,
&apos;Proficient &gt;/= 58.7%&apos;, 0.5,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEASRubricScore</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOEFLScore__c</fullName>
        <label>TOEFL Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USHistoryOrWorldHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US History or World History</label>
        <type>Checkbox</type>
    </fields>
    <label>Enrollment Prelicensure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StudentsState__c</columns>
        <columns>BSPRNApplicationStatus__c</columns>
        <columns>ECRank__c</columns>
        <columns>DirectorsRank__c</columns>
        <columns>NursingFileComplete__c</columns>
        <columns>HealthcareCertificationLicenses__c</columns>
        <columns>HealthcareProviderCPRCertification__c</columns>
        <columns>AssociatesDegree__c</columns>
        <columns>BachelorsDegree__c</columns>
        <columns>GraduateDegree__c</columns>
        <columns>InternationalDegree__c</columns>
        <columns>CAREProfile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllEnrollmentPrelicensureRecordsList</fullName>
        <columns>NAME</columns>
        <columns>BSPRNApplicationStatus__c</columns>
        <columns>ECRank__c</columns>
        <columns>DirectorsRank__c</columns>
        <columns>NursingFileComplete__c</columns>
        <columns>HealthcareCertificationLicenses__c</columns>
        <columns>HealthcareProviderCPRCertification__c</columns>
        <columns>LetterRec1__c</columns>
        <columns>LetterRec2__c</columns>
        <columns>LiberalArts__c</columns>
        <columns>AssociatesDegree__c</columns>
        <columns>BachelorsDegree__c</columns>
        <columns>GraduateDegree__c</columns>
        <columns>InternationalDegree__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Enrollment Prelicensure Records</label>
        <sharedTo>
            <group>BSNursingPrelicensure</group>
            <role>HPPrelicensure</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAStudentRankings</fullName>
        <columns>NAME</columns>
        <columns>StudentsState__c</columns>
        <columns>ActualScienceGPA__c</columns>
        <columns>ActualTEASScore__c</columns>
        <columns>DurationOfHealthcareExperience__c</columns>
        <columns>EmployedInHealthcareIndustry__c</columns>
        <columns>HealthcareCertificationLicenses__c</columns>
        <columns>HealthcareExperience__c</columns>
        <columns>RubricScore__c</columns>
        <columns>DispositionValue__c</columns>
        <columns>LastCallDisposition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StudentsState__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>RubricScore__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>CA Student Rankings</label>
        <sharedTo>
            <role>AdmissionsCounselor</role>
            <role>AssociateEnrollmentCounselor</role>
            <role>BusinessGraduate</role>
            <role>BusinessUndergrad</role>
            <role>EnrollmentIT</role>
            <role>EnrollmentManager</role>
            <role>HPPrelicensure</role>
            <role>HealthProfessions</role>
            <role>HealthProfessionsCollege</role>
            <role>TeachersCollegeElEdSoSci</role>
            <role>TeachersCollegeMEd</role>
            <role>TeachersCollegeMathScience</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cohort_Rubric</fullName>
        <columns>NAME</columns>
        <columns>Cohort__c</columns>
        <columns>DirectorsRank__c</columns>
        <columns>DirectorNotes__c</columns>
        <columns>RubricScore__c</columns>
        <columns>ActualTEASScore__c</columns>
        <columns>TEASExamRange__c</columns>
        <columns>ActualScienceGPA__c</columns>
        <columns>ScienceGPARange__c</columns>
        <columns>PriorDegreeCompletion__c</columns>
        <columns>HealthcareExperience__c</columns>
        <columns>DurationOfHealthcareExperience__c</columns>
        <columns>EmployeeOfPartner__c</columns>
        <columns>PriorNursingSchoolAttendance__c</columns>
        <columns>NursingFileComplete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>startsWith</operation>
            <value>[cohort_name]</value>
        </filters>
        <filters>
            <field>Qualified__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cohort Rubric Template</label>
    </listViews>
    <nameField>
        <label>Enrollment Prelicensure  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Prelicensure</pluralLabel>
    <recordTypes>
        <fullName>NursingPrelicensure</fullName>
        <active>true</active>
        <label>Nursing Prelicensure</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeacherPrelicensure</fullName>
        <active>true</active>
        <label>Teacher Prelicensure</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>